[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "colorextract"
version = "0.1.2"
description = "A Python toolkit for image contrast enhancement (CLAHE), dominant color extraction via K-Means, and multilingual color name matching."
readme = "README.md"
authors = [{ name = "FluxEngine-dev" }]
license = { file = "LICENSE" }
dependencies = [
  'opencv-python>=4.9',
  'numpy>=1.26',
  'matplotlib>=3.9',
  'scikit-learn>=1.5'
]
requires-python = ">=3.10"
